--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Test</title>
+    <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
     
 </head>
 <body>
@@ -12,4 +14,5 @@
     </h1>
     
 </body>
+<footer></footer>
 </html>
