--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li>Lesson 02: <a href= "#">Assignment Link</a></li>
                 <li>Lesson 03: <a href= "#">Assignment Link</a></li>
-                <li>Lesson 04: <a href= "#">link | link</a></li>
+                <li>Lesson 04: <a href= "#">link</a> | <a href= "#">link</a></li>
             </ul>
         </nav>
     </main>
