--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>CIT 230 Home Page Portal</title>
     <meta name= "description" content= "creating a home page for future assignments">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     
 </head>
@@ -15,8 +16,8 @@
     </header>
     <main>
         <h2>CIT 230 Assignment Portal</h2> 
-       <hr> 
-     <nav>
+        <hr> 
+        <nav>
             <ul>
                 <li>Lesson 02: <a href= "#">Assignment Link</a></li>
                 <li>Lesson 03: <a href= "#">Assignment Link</a></li>
@@ -28,9 +29,9 @@
     
 </body>
 <footer> 
-   <p> &copy; 2020 | Heidi Fairhurst | Montana | <a href= "https://www.byui.edu/online">BYUI Online Learning</a> 
-   </p>
-   <p> Last updated: <span id="update-time"></span></p>
+    <p> &copy; 2020 | Heidi Fairhurst | Montana | <a href= "https://www.byui.edu/online">BYUI Online Learning</a> 
+    </p>
+    <p> Last updated: <span id="update-time"></span></p>
 </footer>
 <script src="./js/main.js"></script>
 </html>
