--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <hr> 
         <nav>
             <ul>
-                <li>Lesson 02: <a href= "#">Assignment Link</a></li>
+                <li>Lesson 02: <a href= "lesson2/design-principles.html">Assignment Link</a></li>
                 <li>Lesson 03: <a href= "#">Assignment Link</a></li>
                 <li>Lesson 04: <a href= "#">link</a> | <a href= "#">link</a></li>
             </ul>
