fix google font link

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="wk2-css.css/medium.css">
     <link rel="stylesheet" href="wk2-css.css/small.css">
     <script src="wk2-js.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Raleway:wght@100;wght@200;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;800&display=swap" rel="stylesheet">
 
 </head>
 
@@ -40,7 +39,7 @@
             <h3>Visual Hierarchy</h3>
             <h1>Calm</h1>
             <a class="links" href="https://www.calm.com/"> Calm.com</a>
-            <img src="wk2-img/calm.jpg" alt="Screen shot of Calm home web page, a mountain rang with a serene lake"></a>
+            <img src="wk2-img/calm.jpg" alt="Screen shot of Calm home web page, a mountain rang with a serene lake">
             <p> Visual Hierarchy is the use of color and size to draw attention to important elements.
                 The first thing you notice is the serene background photo. This sends a strong message to users with out
                 words.
@@ -54,7 +53,7 @@
             <h1>Oliver Jeffers</h1>
             <a class="links" href="https://www.oliverjeffers.com/">Oliverjeffers.com</a>
             <img src="wk2-img/oliverjeffers.jpg"
-                alt="a man standin on green grass with a cloudy sky, large white fonted menu"></a>
+                alt="a man standin on green grass with a cloudy sky, large white fonted menu">
             <p>Hick’s Law says, "That every additional choice increases the time required to make a decision". On Oliver
                 Jeffer's web page you can see how
                 displaying only the navigation gives the user few options. These few options help users to take action
@@ -68,7 +67,7 @@
             <h1>Lululemon</h1>
             <a class="links" href="https://shop.lululemon.com/">Lululemon.com</a>
             <img src="wk2-img/lululemon.jpg"
-                alt=" mobile version of lululemon homepage, a photo of a woman running"></a>
+                alt=" mobile version of lululemon homepage, a photo of a woman running">
             <p>Simpliciy and White space are used on this site to create function and impact. The header, the search bar
                 and the drop down menu are all white.
                 This might seem like it would be boring. However, It allows many elements to be present and not
