separated out media quiery code, fixed link large to largest css

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -9,9 +9,9 @@
         content="week 2 of CIT 230, Analysis of 3 design principles using phone screen shots of web pages">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="wk2-css.css/normalize.css">
-    <link rel="stylesheet" href="wk2-css.css/large.css">
-    <link rel="stylesheet" href="wk2-css.css/medium.css">
     <link rel="stylesheet" href="wk2-css.css/small.css">
+    <link rel="stylesheet" href="wk2-css.css/medium.css">
+    <link rel="stylesheet" href="wk2-css.css/largest.css">
     <script src="wk2-js.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;800&display=swap" rel="stylesheet">
 
