--- a/lesson3 /colorscheme.html
+++ b/lesson3 /colorscheme.html
@@ -14,14 +14,11 @@
 
 <body>
     <header>
-        <div><img src="wk3-img/iconfinder_weather-09_1530384.png" alt="Icon of sun and weather">
-        </div>
-        <h1> outsideWeather.com </h1>
-        <h3>Site Plan</h3>
+        <h1>Color Scheme</h1>
         <div>
             <nav>
                 <ul>
-                    <li>Home</li>
+
                     <li><a href="#">Target Audience</a></li>
                     <li><a href="#">Color Scheme</a></li>
                     <li><a href="#">Typography</a></li>
@@ -32,26 +29,18 @@
         </div>
     </header>
     <main>
-    <h4>Site Description</h4>
-    <p>The goal of this site plan is to explain the purpose
-        and targeted audience for outsideweather.com. We will
-        share specific consumer scenarios, website structure
-        and user interface organization. We will also coordinate
-        relevant design and web page style.</p>
-    <h4>Site Name</h4>
-    <p>The name chosen for this site is outsideweather.com .
-        It will be a resource for weather and weather related
-        information. It will highlight locations designated by
-        the assignment.</p>
-    <H4>Mission Statement</H4>
-    <p>The objective of our site is to provide quick and easy
-        weather information that is relevant to the user.</p>
+        <h4>Primary Colors</h4>
+        <ul>
+            <li> #3F88C5- green-blue </li>
+            <li>#OD3B66-Indigo dye</li>
+            <li>#FFF275- Corn</li>
+        </ul>
+        <img class="Color" src="wk3-img/primary colors.png" alt=" three color palette dark blue medium blue and yellow">
+
     </main>
     <footer>
-
         &copy; 2020 | Heidi Fairhurst | Montana | <a class="links" href="https://hcfairhurst.github.io/">Assignment
             Portal</a>
-
     </footer>
 </body>
 
