--- a/lesson3 /colorscheme.html
+++ b/lesson3 /colorscheme.html
@@ -18,12 +18,11 @@
         <div>
             <nav>
                 <ul>
-
-                    <li><a href="#">Target Audience</a></li>
-                    <li><a href="#">Color Scheme</a></li>
-                    <li><a href="#">Typography</a></li>
-                    <li><a href="#">Home</a></li>
-                    </li>
+                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="colorscheme.html">Color Scheme</a></li>
+                    <li><a href="typography.html">Typography</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    
                 </ul>
             </nav>
         </div>
