--- a/lesson3 /index.html
+++ b/lesson3 /index.html
@@ -21,12 +21,12 @@
         <div>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li><a href="#">Target Audience</a></li>
-                    <li><a href="#">Color Scheme</a></li>
-                    <li><a href="#">Typography</a></li>
-                    <li><a href="#">Home</a></li>
-                    </li>
+                    
+                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="colorscheme.html">Color Scheme</a></li>
+                    <li><a href="typography.html">Typography</a></li>
+                    <li><a href="index.html">Home</a></li>
+                   
                 </ul>
             </nav>
         </div>
