wrote css and media queries

--- a/lesson3 /colorscheme.html
+++ b/lesson3 /colorscheme.html
@@ -18,24 +18,29 @@
         <div>
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="target-audience.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
-                    <li><a href="index.html">Home</a></li>
-                    
+
                 </ul>
             </nav>
         </div>
     </header>
-    <main>
-        <h4>Primary Colors</h4>
-        <ul>
-            <li> #3F88C5- green-blue </li>
-            <li>#OD3B66-Indigo dye</li>
-            <li>#FFF275- Corn</li>
-        </ul>
-        <img class="Color" src="wk3-img/primary colors.png" alt=" three color palette dark blue medium blue and yellow">
-
+    <main id="row">
+        <div>
+            <h4>Logo</h4>
+            <img src="wk3-img/iconfinder_weather-09_1530384.png" alt="Icon of sun and weather">
+        </div>
+        <div>
+            <h4>Primary Colors</h4>
+        </div>
+        <div id="corn">#FFF275- Corn
+        </div>
+        <div id="ltblue">#B8D3E9-Light Blue
+        </div>
+        <div id="darkblue">#0D3B66-Indigo dye
+        </div>
     </main>
     <footer>
         &copy; 2020 | Heidi Fairhurst | Montana | <a class="links" href="https://hcfairhurst.github.io/">Assignment
