--- a/lesson3 /typography.html
+++ b/lesson3 /typography.html
@@ -19,10 +19,10 @@
             <nav>
                 <ul>
 
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="target-audience.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
-                    <li><a href="index.html">Home</a></li>
                     
                 </ul>
             </nav>
@@ -50,7 +50,7 @@
             </tr>
             <tr>
                 <td>P, body text</td>
-                <td>Lato</td>
+                <td>Open Sans</td>
                 <td>Normal</td>
                 <td>Normal</td>
                 <td id="sample2">Sample</td>
@@ -63,3 +63,12 @@
                 <td id="sample3">Sample</td>
             </tr>
         </table>
+</main>
+<footer>
+
+    &copy; 2020 | Heidi Fairhurst | Montana | <a class="links" href="https://hcfairhurst.github.io/">Assignment
+        Portal</a>
+
+</footer>
+</body>
+</html>
