--- a/lesson3 /target-audience.html
+++ b/lesson3 /target-audience.html
@@ -14,15 +14,15 @@
 
 <body>
     <header>
-        </div>
+       
         <h1> Target Audience </h1>
         <div>
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="target-audience.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
-                    <li><a href="index.html">Home</a></li>
                    
                 </ul>
             </nav>
@@ -58,7 +58,7 @@
         <section class="personas">
             <h2>Personas</h2>
             <img src="wk3-img/PersonaMan.png" alt="Man and demographic informationabout him">
-            <img src="wk3-img/PersonaWoman.png" alt="">
+            <img src="wk3-img/PersonaWoman.png" alt="blonde 60 year old woman headshot">
         </section>
         <section>
             <h4>Senarios</h4>
