--- a/lesson3 /colorscheme.html
+++ b/lesson3 /colorscheme.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="wk-3.css/small.css">
+    <link rel="stylesheet" href="wk-3.css/medium.css">
     <script src="wk-3.js"></script>
 </head>
 
