--- a/lesson3 /typography.html
+++ b/lesson3 /typography.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="wk-3.css/small.css">
     <link rel="stylesheet" href="wk-3.css/medium.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <script src="wk-3.js"></script>
 </head>
 
