debugged fixed color scheme

--- a/lesson3 /target-audience.html
+++ b/lesson3 /target-audience.html
@@ -65,11 +65,14 @@
         <section>
             <h4>Senarios</h4>
             <ul>
-                <li>1. Why is having access to accurate weather important?</li>
-                <li>2. When do you need access to weather?</li>
+                <li>1. I need to know the weather so that I know what to pack for my clients for a day on the river</li>
+                <li>2. I need a accurate weather forcast to make appointments for clients</li>
                 <li>3. How does knowing the weather conditions affect you day?</li>
-                <li>4. What do you look for when exploring the weather forecast?</li>
+                <li>4. I want to go surfing and I need to know what the weather is.</li>
                 <li>5. Looking for information on upcoming emergency weather</li>
+                <li>6. How should I dress for a day working outside</li>
+                <li>7. My kids want to plan a trip to the beach, what should we prepare for</li>
+                <li>8. My wife and I are going on a trip and we need to know what weather to pack for</li>
             </ul>
         </section>
     </main>
