--- a/lesson3 /colorscheme.html
+++ b/lesson3 /colorscheme.html
@@ -30,9 +30,9 @@
         </div>
     </header>
     <main id="row">
-        <div>
+        <div class="logobox">
             <h4>Logo</h4>
-            <img src="wk3-img/iconfinder_weather-09_1530384.png" alt="Icon of sun and weather">
+            <img src="wk3-img/Logosmall.png" alt="Icon of sun and weather">
         </div>
         <div>
             <h4>Primary Colors</h4>
@@ -46,13 +46,13 @@
                 <tr>
                     <td id="darkblue">#0D3B66</td>
                     <td id="ltblue">#B8D3E9</td>
-                    <td id="corn">#FFF275</td>
+                    <td id="Naples yellow">#FFDF6E</td>
                     
                 </tr>
                 <tr>
                     <td id="darkblue">header,footer,<br> bolded headers</td>
                     <td id="ltblue">Nav bar, </td>
-                    <td id="corn">hover</td>
+                    <td id="yellow">hover</td>
                     
                 </tr>
             </table>
