added logo path

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -17,9 +17,10 @@
 
 <body>
     <header>
+       <div id="logo"> <img src="images/Logosmall.png" alt="sunshine and clouds"></div>
         <h1> Outside Weather </h1>
         <div>Accurate to help you plan ahead</div>
-        <img src="" alt="">
+        
     </header>
     <nav class="clearfix">
         <ul class="navigation">
