linked in js for menu function, text-aligned h2

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -22,7 +22,7 @@
         <div>Accurate to help you plan ahead</div>
        </section>
     </header>
-    <nav class="clearfix">
+    <nav>
         <ul class="navigation">
              <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="#">Preston</a></li>
@@ -34,11 +34,26 @@
         </ul>
     </nav>
     <main>
+        <section class="section1">
         <h2>Preston Idaho</h2>
+        <div class="weatherSum">
         <div class="contentbox">Hero w/weather summary</div>
         <div class="contentbox">5 Day Forcast</div>
         <div class="contentbox">Article</div>
         <div class="contentbox">Contact info</div>
+        </div>
+    <img src="" alt="">
+</section>
+<section class="section2">
+    <h2> 5 Day Forcast</h2>
+    <div></div>
+</section>
+<section class="section3">
+    <h2>Article</h2>
+</section>
+<section class="section4">
+    <p>Contact information</p>
+</section>
     </main>
     <footer>
 
@@ -46,7 +61,7 @@
         <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/">Assignment Portal</a></p>
         
     </footer>
-    <script src=""></script>
+    <script src="js/js-wk.js"></script>
 </body>
 
 
