--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <hr> 
         <nav>
             <ul>
-                <li>Lesson 02: <a href= "lesson2/design-principles.html">Assignment Link</a></li>
-                <li>Lesson 03: <a href= "lesson3 /index.html">Assignment Link</a></li>
-                <li>Lesson 04: <a href= "#">link</a> | <a href= "#">link</a></li>
+                <li>Lesson 02: <a href= "lesson2/design-principles.html">Lesson 2</a></li>
+                <li>Lesson 03: <a href= "lesson3 /index.html">Lesson 3</a></li>
+                <li>Lesson 04: <a href= "lesson4/preston-4.html">Lesson 4</a> | <a href= "#">link</a></li>
             </ul>
         </nav>
     </main>
