--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -7,7 +7,7 @@
     <title>Outside Weather</title>
     <meta name="description" content="Weather home page for cit 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="css/smallwk4.css">
     <link rel="stylesheet" href="css/mediumwk4.css">
     <link rel="stylesheet" href="css/largewk4.css">
@@ -30,19 +30,19 @@
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
             <li><a href="#">Gallery</a></li>
-            </li>
         </ul>
     </nav>
     <main>
-        <h2>Preston Idaho</h2>
+        
         <section class="section1">
+            <h2>Preston Idaho</h2>
        <div class="weatherSum">
         <div class="contentbox">Hero w/weather summary</div>
         <div class="contentbox">5 Day Forcast</div>
         <div class="contentbox">Article</div>
         <div class="contentbox">Contact info</div>
         </div>
-    <img src="" alt="">
+    <img src="#" alt="">
 </section>
 <section class="section2">
     <h2> 5 Day Forcast</h2>
@@ -52,7 +52,7 @@
     <h2>Article</h2>
 </section>
 <section class="section4">
-    <p>Contact information</p>
+    <h2>Contact information</h2>
 </section>
     </main>
     <footer>
