fixed js todaysDate

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -57,7 +57,9 @@
     </main>
     <footer>
 
-        <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/">Assignment Portal</a></p>
+        <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/">Assignment Portal</a>|
+             <span id="todaysDate"></span>
+        </p>
         
     </footer>
     <script src="js/js-wk.js"></script>
