--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -7,6 +7,7 @@
     <title>Outside Weather</title>
     <meta name="description" content="Weather home page for cit 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="shortcut icon" href="images/favicon sun(1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="css/smallwk4.css">
     <link rel="stylesheet" href="css/mediumwk4.css">
