image6 creation and image set up

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         </p>
         <p> Last updated: <span id="update-time"></span></p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>WebFont.load({
+        google: {families: ['Manrope,Dancing Script']}});</script>
 </body>
 <script src="./js/main.js"></script>
 </html>
