change imag names

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -42,7 +42,7 @@
         <section class="section1">
             <picture class="photoA">
                 <source media="(max-width: 200px)" srcset="/lesson6/images6/wdd230_image_franklin200pxl.jpg 200w">
-                <source media="(max-width: 500px )" srcset="/lesson6/wdd230_image_franklin500px.jpg 500w"> 
+                <source media="(max-width: 500px)" srcset=""> 
                <source media="(max-width: 800px)" srcset= "/lesson6/wdd230_image_franklin800px.jpg 800w">  
                  <img id="heroimg" src="/lesson6/images6/wdd230_image_franklinOriginal.jpeg" alt="green rolling hills">
             </picture>  
