fixed img optim

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -40,9 +40,9 @@
         <h2>Preston Idaho</h2>
         <section class="section1">
             <picture class="photoA">
-                <source media="(max-width: 300px)" srcset="images6/smallfranklin300px.jpg">
-                <source media="(max-width: 500px)" srcset="images6/franklin500px.jpg"> 
-               <source media="(max-width: 800px)" srcset= "images6/franklin800px.jpg">  
+                <source media="(min-width: 250px) and (max-width: 500px)" srcset="images6/smallfranklin300px.jpg">
+                <source media="(min-width: 501px) and (max-width: 799px)" srcset="images6/franklin500px.jpg"> 
+               <source media="(min-width: 800px)" srcset= "images6/franklin800px.jpg">  
                  <img id="heroimg" src="images6/franklinOriginal.jpeg" alt="green rolling hills">
             </picture>  
             <div class="weatherSum">
