comment js understanding, filled in pictures

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -19,22 +19,24 @@
     
 
 <h1>Photo Gallery</h1>
-<picture> <a href="http://placeholder.com">
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-source="">
-</a></picture>
-<picture> <a href="http://placeholder.com">
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder">
-</a></picture>
-<picture> <a href="http://placeholder.com">
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder">
-</a></picture>
-<picture> <a href="http://placeholder.com">
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder">
-</a></picture>
-<picture> <a href="http://placeholder.com">
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder">
-</a></picture>
-
+<div class="gallery">
+<picture> 
+    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/autumn.jpg">
+</picture>
+<picture> 
+    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/clouds.jpg">
+</picture>
+<picture> 
+    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/rain.jpg">
+</picture>
+<picture> 
+    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder"data-src="images7/lightning.jpg">
+</picture>
+<picture> 
+    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/sunset.jpg">
+</picture>
+</div>
 
 </body>
+<script src="/lesson7/lazyload.js"></script>
 </html>
