--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <li>Lesson 04: <a href= "lesson4/preston-4.html">Lesson 4</a></li>
                 <li>Lesson 05: <a href= "lesson5/preston-5.html">Lesson 5</a></li>
                 <li>Lesson 06: <a href= "lesson6/preston-6.html">Lesson 6</a></li>
+                <li>Lesson 07a: <a href= "lesson7/lazyload.html">Lesson 7A lazyload</a></li>
+                <li>Lesson 07b: <a href= "lesson7/lazyload.html">Lesson 7b Gallery</a></li>
             
             </ul>
         </nav>
