--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -13,7 +13,7 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
-    
+    <title>Lazy Load</title>
 </head>
 <body>
     
@@ -21,19 +21,19 @@
 <h1>Photo Gallery</h1>
 <div class="gallery">
 <picture> 
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/autumn.jpg">
+    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/clouds300400.jpg">
 </picture>
 <picture> 
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/clouds.jpg">
+    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/autumn300400.jpg">
 </picture>
 <picture> 
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/rain.jpg">
+    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/snow300400.jpg">
 </picture>
 <picture> 
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder"data-src="images7/lightning.jpg">
+    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/lightning300400.jpg">
 </picture>
 <picture> 
-    <img src="https://via.placeholder.com/300x400/808080/000000.JPG/?Text=Placeholder" data-src="images7/sunset.jpg">
+    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/sunset300400.jpg">
 </picture>
 </div>
 
