--- a/lesson7/gallery7.html
+++ b/lesson7/gallery7.html
@@ -10,45 +10,62 @@
     <link rel="shortcut icon" href="images7/faviconsun(1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="wk7.css/small.css">
+    <link rel="stylesheet" href="wk7.css/medium.css">
+    <link rel="stylesheet" href="wk7.css/large.css">
    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
     <title>Lazy Load</title>
 </head>
 <body>
+    <header>
+    <h1>Photo Gallery</h1>
+     </header>
     
-
-<h1>Photo Gallery</h1>
+<main>
 <div class="grid">
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/autumn.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/clouds.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/rain.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder"data-src="images7/lightning.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/sunset.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/sunset.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/sunset.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/sunset.jpg">
-</picture>
-<picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/sunset.jpg">
-</picture>
+ 
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/clouds300400.jpg">
+        <figcaption>Clouds</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/autumn300400.jpg">
+        <figcaption>Autumn</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/snow300400.jpg">
+        <figcaption>Snow</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/lightning300400.jpg">
+        <figcaption>Thunder Storm</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/sunset300400.jpg">
+        <figcaption>Sunset</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/storm300400.jpg">
+        <figcaption>Overcast</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/grass300400.jpg">
+        <figcaption>Windy</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/snowwind300400.jpg">
+        <figcaption>Blizzard</figcaption>
+    </figure>
+    <figure> 
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/stars300400.jpg">
+        <figcaption>Stargazing</figcaption>
+    </figure>
 </div>
+</main>
+<footer>
 
+</footer>
 </body>
 <script src="/lesson7/lazyload.js"></script>
 </html>
