blur fix add nav to gallery

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -21,7 +21,7 @@
 <h1>Photo Gallery</h1>
 <div class="gallery">
 <picture> 
-    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/clouds300400.jpg">
+    <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/clouds300400.jpg" alt="clouds">
 </picture>
 <picture> 
     <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/autumn300400.jpg">
