--- a/lesson7/gallery7.html
+++ b/lesson7/gallery7.html
@@ -19,8 +19,22 @@
 </head>
 <body>
     <header>
-    <h1>Photo Gallery</h1>
-     </header>
+        <picture> <img src="/lesson6/images6/Logosmall.png" alt="sunshine and clouds"></picture>
+        <section class="headings">
+            <h1> Outside Weather </h1>
+            <div>Accurate to help you plan ahead</div>
+        </section>
+    </header>
+    <nav>
+        <ul class="navigation">
+            <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
+            <li class="active"><a href="#">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
+        </ul>
+    </nav>
     
 <main>
 <div class="grid">
