--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Outside Weather</title>
-    <meta name="description" content="Lazy Load Gallery">
+    <meta name="description" content="Lazy Load  progressive loading of pictures">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images7/faviconsun(1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
@@ -13,12 +13,12 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
-    <title>Lazy Load</title>
+    
 </head>
 <body>
     
 
-<h1>Photo Gallery</h1>
+<h1>Progressive Loading</h1>
 <div class="gallery">
 <picture> 
     <img src="https://via.placeholder.com/300x400?Text=Placeholder" data-src="images7/clouds300400.jpg" alt="clouds">
