linked gallery to prestion, fix js, added blur

--- a/lesson7/gallery7.html
+++ b/lesson7/gallery7.html
@@ -22,17 +22,17 @@
         <picture> <img src="/lesson6/images6/Logosmall.png" alt="sunshine and clouds"></picture>
         <section class="headings">
             <h1> Outside Weather </h1>
-            <div>Accurate to help you plan ahead</div>
+            <div>Accurate, to help YOU plan ahead</div>
         </section>
     </header>
     <nav>
         <ul class="navigation">
             <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li class="active"><a href="#">Preston</a></li>
+            <li ><a href="/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li class="active"><a href="/lesson7/gallery7.html">Gallery</a></li>
         </ul>
     </nav>
     
@@ -81,5 +81,6 @@
 
 </footer>
 </body>
+<script src="/lesson7/main.js"></script>
 <script src="/lesson7/lazyload.js"></script>
 </html>
