--- a/lesson7/gallery7.html
+++ b/lesson7/gallery7.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Outside Weather</title>
+    <title>Outside Weather Picture Gallery</title>
     <meta name="description" content="Lazy Load Gallery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images7/faviconsun(1).ico">
@@ -15,7 +15,7 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
-    <title>Lazy Load</title>
+   
 </head>
 <body>
     <header>
@@ -80,7 +80,8 @@
 <footer>
 
 </footer>
-</body>
 <script src="/lesson7/main.js"></script>
 <script src="/lesson7/lazyload.js"></script>
+</body>
+
 </html>
