--- a/lesson7/gallery7.html
+++ b/lesson7/gallery7.html
@@ -40,39 +40,39 @@
 <div class="grid">
  
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/clouds300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/clouds300400.jpg" alt="clouds fluffy">
         <figcaption>Clouds</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/autumn300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/autumn300400.jpg" alt="trees with autumn colors">
         <figcaption>Autumn</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/snow300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/snow300400.jpg" alt="snow">
         <figcaption>Snow</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/lightning300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/lightning300400.jpg" alt="storm and lightning">
         <figcaption>Thunder Storm</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/sunset300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/sunset300400.jpg" alt="sunset">
         <figcaption>Sunset</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/storm300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/storm300400.jpg" alt="storm">
         <figcaption>Overcast</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/grass300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/grass300400.jpg" alt="windblown wheat">
         <figcaption>Windy</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/snowwind300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/snowwind300400.jpg" alt="wind and snow">
         <figcaption>Blizzard</figcaption>
     </figure>
     <figure> 
-        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/stars300400.jpg">
+        <img src="https://via.placeholder.com/300x400?text=Placeholder" data-src="images7/stars300400.jpg" alt="milkyway galaxy">
         <figcaption>Stargazing</figcaption>
     </figure>
 </div>
