--- a/lesson7/gallery7.html
+++ b/lesson7/gallery7.html
@@ -78,7 +78,11 @@
 </div>
 </main>
 <footer>
-
+     <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/">Assignment
+            Portal</a>|
+            <span id="todaysDate"></span>
+        </p>
+        
 </footer>
 <script src="/lesson7/main.js"></script>
 <script src="/lesson7/lazyload.js"></script>
