--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -18,9 +18,9 @@
            <th colspan="3">ACME Wildwest</th>
          </tr>
          <tr>
-           <td class ="active">Period</td>
-           <td class ="active">Sales</td>
-           <td class ="active">Sales Goals</td>
+           <td class ="activetop">Period</td>
+           <td class ="activetop">Sales</td>
+           <td class ="activetop">Sales Goals</td>
           </tr>
          <tr>
            <td>August</td>
@@ -43,7 +43,7 @@
            <td class="active">$7,500</td>
            </tr>
           <tr>
-           <td>Black Friday</td>
+           <td id="blackfri">Black Friday</td>
            <td colspan="2">$3,200</td>
            </tr>
           <tr>
@@ -54,7 +54,7 @@
        </tbody>
        <tfoot>
          <tr>
-           <td colspan="3">compile 12.20.2020 by bRauls</td>
+           <td colspan="3">Compile 12.20.2020 by bRauls</td>
            </tr>
        </tfoot>
          </table>
