--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <li>Lesson 04: <a href= "lesson4/preston-4.html">Lesson 4</a></li>
                 <li>Lesson 05: <a href= "lesson5/preston-5.html">Lesson 5</a></li>
                 <li>Lesson 06: <a href= "lesson6/preston-6.html">Lesson 6</a></li>
-                <li>Lesson 07a: <a href= "lesson7/lazyload.html">Lesson 7 Lazyload</a></li>
-                <li>Lesson 07b: <a href= "/lesson7/gallery7.html">Lesson 7 Gallery</a></li>
+                <li>Lesson 07a: <a href= "lesson7/lazyload.html"> Lazyload</a> | b: <a href= "/lesson7/gallery7.html"> Gallery</a></li>
+                <li>Lesson 08: <a href= "lesson8/tablebuild.html">tablebuild</a></li>
             
             </ul>
         </nav>
