--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -2,61 +2,63 @@
 <html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Table Build</title>
-    <meta name="description" content="Pre set table build for CIT230">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images6/faviconsun(1).ico">
-    <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
-    <link rel="stylesheet" href="/lesson8/tablebuild.css">  
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Table Build</title>
+  <meta name="description" content="Pre set table build for CIT230">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../images6/faviconsun(1).ico">
+  <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
+  <link rel="stylesheet" href="/lesson8/tablebuild.css">  
 </head>
 <body>
-    <table class="flat-table">
-        <tbody>
-         <tr>
-           <th colspan="3">ACME Wildwest</th>
-         </tr>
-         <tr>
-           <td class ="activetop">Period</td>
-           <td class ="activetop">Sales</td>
-           <td class ="activetop">Sales Goals</td>
-          </tr>
-         <tr>
-           <td>August</td>
-           <td>$3,590</td>
-           <td>$4,000</td>
-           </tr>
-          <tr>
-           <td>September</td>
-           <td>$4,420</td>
-           <td>$5,000</td>
-           </tr>
-           <tr>
-           <td>October</td>
-           <td>$4,970</td>
-           <td>$5,000</td>
-           </tr>
-          <tr>
-           <td>November</td>
-           <td>$8,610</td>
-           <td class="active">$7,500</td>
-           </tr>
-          <tr>
-           <td id="blackfri">Black Friday</td>
-           <td colspan="2">$3,200</td>
-           </tr>
-          <tr>
-           <td>December</td>
-           <td>$6,820</td>
-           <td>$7,500</td>
-           </tr>
-       </tbody>
-       <tfoot>
-         <tr>
-           <td colspan="3">Compile 12.20.2020 by bRauls</td>
-           </tr>
-       </tfoot>
-         </table>
-    
+  <table class="flat-table">
+    <tbody>
+      <tr>
+        <th colspan="3">ACME Wildwest</th>
+      </tr>
+      <tr>
+        <td class ="activetop">Period</td>
+        <td class ="activetop">Sales</td>
+        <td class ="activetop">Sales Goals</td>
+      </tr>
+      <tr>
+        <td>August</td>
+        <td>$3,590</td>
+        <td>$4,000</td>
+      </tr>
+      <tr>
+        <td>September</td>
+        <td>$4,420</td>
+        <td>$5,000</td>
+      </tr>
+      <tr>
+        <td>October</td>
+        <td>$4,970</td>
+        <td>$5,000</td>
+      </tr>
+      <tr>
+        <td>November</td>
+        <td>$8,610</td>
+        <td class="active">$7,500</td>
+      </tr>
+      <tr>
+        <td id="blackfri">Black Friday</td>
+        <td colspan="2">$3,200</td>
+      </tr>
+      <tr>
+        <td>December</td>
+        <td>$6,820</td>
+        <td>$7,500</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="3">Compile 12.20.2020 by bRauls</td>
+      </tr>
+    </tfoot>
+  </table>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="wk6js/webfontloader.js"></script>  
 </body>
+</html>
