--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -18,9 +18,9 @@
         <th colspan="3">ACME Wildwest</th>
       </tr>
       <tr>
-        <td class ="activetop">Period</td>
-        <td class ="activetop">Sales</td>
-        <td class ="activetop">Sales Goals</td>
+        <td bgcolor="#628ca6"><b>Period</b></td>
+        <td bgcolor="#628ca6"><b>Sales</b></td>
+        <td bgcolor="#628ca6"><b>Sales Goals</b></td>
       </tr>
       <tr>
         <td>August</td>
@@ -40,10 +40,10 @@
       <tr>
         <td>November</td>
         <td>$8,610</td>
-        <td class="active">$7,500</td>
+        <td id="active" bgcolor="#628ca6">$7,500</td>
       </tr>
       <tr>
-        <td id="blackfri">Black Friday</td>
+        <td><i>Black Friday</i></td>
         <td colspan="2">$3,200</td>
       </tr>
       <tr>
