--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -7,16 +7,20 @@
     <title>Outside Weather Picture Gallery</title>
     <meta name="description" content="Lazy Load Gallery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicon -->
     <link rel="shortcut icon" href="images8/faviconsun(1).ico">
+    <!-- STYLE SHEETS -->
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="wk8css/small.css">
     <link rel="stylesheet" href="wk8css/medium.css">
     <link rel="stylesheet" href="wk8css/large.css">
-   
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-   
+    <!-- font -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
     <header>
         <picture> <img src="/lesson8/images8/Logosmall.png" alt="sunshine and clouds"></picture>
@@ -28,7 +32,7 @@
     <nav>
         <ul class="navigation">
             <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li ><a href="/lesson6/preston-6.html">Preston</a></li>
+            <li><a href="/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="active">Storm Center</a></li>
@@ -36,19 +40,82 @@
         </ul>
     </nav>
     <main>
-<fieldset><label for=""></label></fieldset>
+        <h1> Report significant weather</h1>
+        <form>
+            <fieldset>
+                <legend>Personal Information</legend>
+                <label class="top"> Full Name* <input type="text" name="fname" minlength="5" required
+                        pattern="#"></label>
+                <label class="top"> Phone <input type="tel" name="phone" placeholder="###-###-####" required></label>
+                <label class="top"> Email* <input type="email" name="email" placeholder="someone@gmail.com"
+                        required></label>
+                <label class="top"> Zip Code <input type="number" name="zip" required></label>
+
+            </fieldset>
+            <fieldset>
+                <legend>Storm Information</legend>
+                <label> Storm Date <input type="date" name="date"></label>
+
+                <label for="stormtype">Storm Type:
+                    <input type="list" name="stormtype" list="stormlist" placeholder="  click to select"></label>
+                <datalist id="stormlist">
+                    <option value="Flash Flood">
+                    <option value="Hail">
+                    <option value="Hurricane">
+                    <option value="Thunderstorm">
+                    <option value="Tornado">
+                </datalist>
+
+                <label for="rating">Rate Storm Severity: 
+                    <input type="range" id="rating" value="5" min="1" max="10" step="1" 
+                    list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+				<span id="ratingvalue">5</span>
+                </label>
+                <datalist id="tickmarks">
+                    <option value="0">
+                    <option value="1">
+                    <option value="2">
+                    <option value="3">
+                    <option value="4">
+                    <option value="5">
+                    <option value="6">
+                    <option value="7">
+                    <option value="8">
+                    <option value="9">
+                    <option value="10">
+                  </datalist>
+
+                  <label for="region">Storm region
+                      <input type="list" name="region" list="arealist"></label>
+                      <datalist id="arealist">
+                          <option> Select Region </option>
+                          <option value="Preston"></option>
+                          <option value="Soda Springs"></option>
+                          <option value="Fish Haven"></option>
+                      </datalist>
+                        <div>User In-Danger Level</div>
+                      <label for="dangerlevel">
+                        <lable class="sbs"><input type="radio" name="dangerlevel" value="Yes">Yes</lable>
+                        <lable class="sbs"><input type="radio" name="dangerlevel" value="No">No</lable>
+                        <lable class="sbs"><input type="radio" name="dangerlevel" value="Maybe">Maybe</lable>
+                      </label>
+            </fieldset>
+
+
+
+        </form>
 
 
     </main>
     <footer>
         <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/">Assignment
-               Portal</a>|
-               <span id="todaysDate"></span>
-           </p>
-           
-   </footer>
-   <script src="/lesson8/main.js/storm.js"></script>
-  
-   </body>
-   
-   </html>
+                Portal</a>|
+            <span id="todaysDate"></span>
+        </p>
+
+    </footer>
+    <script src="/lesson8/main.js/storm.js"></script>
+
+</body>
+
+</html>
