update font method

--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Pre set table build for CIT230">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../images6/faviconsun(1).ico">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
   <link rel="stylesheet" href="/lesson8/tablebuild.css">  
 </head>
@@ -58,7 +59,5 @@
       </tr>
     </tfoot>
   </table>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script src="wk6js/webfontloader.js"></script>  
 </body>
 </html>
