--- a/start-Form/index.html
+++ b/start-Form/index.html
@@ -61,14 +61,14 @@
             <fieldset>
                 <legend> Course information</legend>
                 <div>Audience</div>
-               <lable class="sbs"><input type="radio" name="audience" value="beginner">Beginner</lable>
-               <lable class="sbs"><input type="radio" name="audience" value="intermediate">Intermediate</lable>
-               <lable class="sbs"><input type="radio" name="audience" value="advanced">Advanced</lable>
+               <label class="sbs"><input type="radio" name="audience" value="beginner">Beginner</label>
+               <label class="sbs"><input type="radio" name="audience" value="intermediate">Intermediate</label>
+               <label class="sbs"><input type="radio" name="audience" value="advanced">Advanced</label>
             <div>Software Needed</div>
-            <lable class="sbs"><input type="checkbox" name="editing" value="yes">Photo Editing</lable>
-            <lable class="sbs"><input type="checkbox" name="code" value="yes">Coding</lable>
-            <lable class="sbs"><input type="checkbox" name="process" value="yes">Preprocessor</lable>
-            <lable class="sbs"><input type="checkbox" name="client" value="yes">FTP client</lable>
+            <label class="sbs"><input type="checkbox" name="editing" value="yes">Photo Editing</label>
+            <label class="sbs"><input type="checkbox" name="code" value="yes">Coding</label>
+            <label class="sbs"><input type="checkbox" name="process" value="yes">Preprocessor</label>
+            <label class="sbs"><input type="checkbox" name="client" value="yes">FTP client</label>
          </fieldset>
 
          <fieldset>
