link to home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Lesson 05: <a href= "lesson5/preston-5.html">Lesson 5</a></li>
                 <li>Lesson 06: <a href= "lesson6/preston-6.html">Lesson 6</a></li>
                 <li>Lesson 07: <a href= "lesson7/lazyload.html"> Lazyload</a> | <a href= "/lesson7/gallery7.html"> Gallery</a></li>
-                <li>Lesson 08: <a href= "lesson8/tablebuild.html">Tablebuild</a></li>
+                <li>Lesson 08: <a href= "lesson8/tablebuild.html">Tablebuild</a> | <a href= "/lesson8/stormcenter.html"> Gallery</a></li>
             
             </ul>
         </nav>
