--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -35,7 +35,7 @@
             <li><a href="/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="active">Storm Center</a></li>
+            <li class="active"><a href="/lesson8/stormcenter.html">Storm Center</a></li>
             <li class="#"><a href="/lesson7/gallery7.html">Gallery</a></li>
         </ul>
     </nav>
