--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -45,7 +45,7 @@
             <fieldset>
                 <legend>Personal Information</legend>
                 <label class="top"> Full name* <input type="text" name="fullname" required
-                        pattern="[a-zA-Z\.\p{L}]{5,}" placeholder="First Last"></label>
+                        pattern="[A-Za-z].{4,}" placeholder="First Last"></label>
                 <label class="top"> Phone <input type="tel" name="phone" placeholder="###-###-####" required></label>
                 <label class="top"> Email* <input type="email" name="email" placeholder="someone@gmail.com"
                         required></label>
