add html lang attribute

--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
         <div class="cards">
             <section>
                 <h2></h2>
-                <p><img src="" alt=""></p>
+                <p><img src="#" alt="#"></p>
             </section>
         </div>
 
