connected home button to nav on all pages

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -37,6 +37,7 @@
             <li><a href="#">Fish Haven</a></li>
             <li class="active"><a href="/lesson8/stormcenter.html">Storm Center</a></li>
             <li class="#"><a href="/lesson7/gallery7.html">Gallery</a></li>
+            <li><a href="/lesson9/index.html">Home</a></li>
         </ul>
     </nav>
     <main>
