--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -29,11 +29,12 @@
     <nav>
         <ul class="navigation">
             <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li class="active"><a href="#">Preston</a></li>
+            <li ><a href="/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
             <li><a href="/lesson7/gallery7.html">Gallery</a></li>
+            <li class="active"><a href="/lesson9/index.html">Home</a></li>
         </ul>
     </nav>
     <main>
