connected home to portal

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Lesson 06: <a href= "lesson6/preston-6.html">Lesson 6</a></li>
                 <li>Lesson 07: <a href= "lesson7/lazyload.html"> Lazyload</a> | <a href= "/lesson7/gallery7.html"> Gallery</a></li>
                 <li>Lesson 08: <a href= "lesson8/tablebuild.html">Tablebuild</a> | <a href= "/lesson8/stormcenter.html"> Storm Center</a></li>
-                <li>Lesson 09: <a href= "lesson9/prophets.html">Prophets</a> | <a href="#"></a>Weather Site Home Page</li>
+                <li>Lesson 09: <a href= "lesson9/prophets.html">Prophets</a> | <a href="/lesson9/index.html"></a>Weather Site Home Page</li>
             </ul>
         </nav>
     </main>
