--- a/lesson10/api-test.html
+++ b/lesson10/api-test.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
 
-    <title>API test</title>
+<head>
+  <meta charset="utf-8"/>
 
-    <link href="#" rel="stylesheet">
-    <link rel="stylesheet" href="#">
-  </head>
+  <title>API test</title>
 
-  <body>
+  <link href="#" rel="stylesheet"/>
+  <link rel="stylesheet" href="#"/>
+</head>
 
-    <h1>OpenWeatherMap.org API Test</h1>
-    <p>The current temperature in Preston, Idaho is <span id="current-temp"></span>&deg; F</p>
-    <hr>
-    <p>Image Icon Path Test: <span id="imagesrc"></span> &nbsp; <img src="" alt="" id="icon"></p>
-    
-    <script src="js/weatherapi.js"></script>
-    </body>
-    </html>
+<body>
+
+  <h1>OpenWeatherMap.org API Test</h1>
+  <p>The current temperature in Preston, Idaho is <span id="current-temp"></span>&deg; F</p>
+  <hr>
+  <p>Image Icon Path Test: <span id="imagesrc"></span> &nbsp; <img src="" alt="" id="icon"/></p>
+
+  <script src="/lesson10/wk-10.js/weatherapi.js"></script>
+</body>
+
+</html>
