--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -179,7 +179,8 @@
                             <script src="wk-10.js/main.js"></script>
                             <script src="wk-10.js/windchill.js"></script>
                             <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-                            <script src="wk-10.js/"></script>  
+                            <script>WebFont.load({
+                                google: {families: ['Open Sans']}});</script> 
                             <script src="wk-10.js/forecast.js"></script> 
                         </body>
                         
