progress on js 5 day forcast

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -50,7 +50,7 @@
                 
                 <div id="boxtitle">Weather Summary</div>
                 <div id="current" class="contentbox"></div>
-                <div class="contentbox"><span id="temp">  </span>°F</div><!--temp-->
+                <div class="contentbox"><span id="high">  </span>°F</div><!--temp-->
                 <div class="contentbox">Wind Chill : <span id="chillWind"> </span> °F</div><!--windchill-->
                 <div id="humid" class="contentbox">Humitdity : 20%</div>
                 <div class="contentbox">Wind Speed :<span id="wind"> 15</span> mph</div><!--wind-->
@@ -63,7 +63,7 @@
                 <div class="flex-col">
                     <span class="day">Mon</span>
                     <img src="/lesson6/images6/suncloudy-png_1780731.png" alt= "sun">
-                    <span class="temp">72°</span>
+                    <span id="monForcast" class="temp">72°</span>
                 </div>
                 <div class="flex-col">
                     <span class="day">Tue</span>
