fixed js. temp and day

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -62,28 +62,28 @@
             <div class="forecast">
                 <div class="flex-col">
                     <span class="day">Mon</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" alt= "sun">
-                    <span id="monForcast" class="temp">72°</span>
+                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon1"alt= "sun">
+                    <span id="high1" class="temp">°</span>
                 </div>
                 <div class="flex-col">
                     <span class="day">Tue</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" alt= "sun">
-                    <span class="temp">65°</span>
+                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon2" alt= "sun">
+                    <span id="high2" class="temp">°</span>
                 </div>
                 <div class="flex-col">
                     <span class="day">Wed</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" alt= "sun">
-                    <span class="temp">72°</span>
+                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon3" alt= "sun">
+                    <span id="high3" class="temp">°</span>
                 </div>
                 <div class="flex-col">
                     <span class="day">Thur</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" alt= "sun">
-                    <span class="temp">72°</span>
+                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon4" alt= "sun">
+                    <span id="high4" class="temp">°</span>
                 </div>
                 <div class="flex-col">
                     <span class="day">Fri</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" alt= "sun">
-                    <span class="temp">55°</span>
+                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon5" alt= "sun">
+                    <span id="high5" class="temp">°</span>
                 </div>
                 
                 
