--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -61,27 +61,27 @@
             <h2> 5 Day Forecast</h2>
             <div class="forecast">
                 <div class="flex-col">
-                    <span class="day">Mon</span>
+                    <span id="day1" class="day">Mon</span>
                     <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon1"alt= "sun">
                     <span id="high1" class="temp">°</span>
                 </div>
                 <div class="flex-col">
-                    <span class="day">Tue</span>
+                    <span id="day2" class="day">Tue</span>
                     <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon2" alt= "sun">
                     <span id="high2" class="temp">°</span>
                 </div>
                 <div class="flex-col">
-                    <span class="day">Wed</span>
+                    <span id="day3" class="day">Wed</span>
                     <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon3" alt= "sun">
                     <span id="high3" class="temp">°</span>
                 </div>
                 <div class="flex-col">
-                    <span class="day">Thur</span>
+                    <span id="day4" class="day">Thur</span>
                     <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon4" alt= "sun">
                     <span id="high4" class="temp">°</span>
                 </div>
                 <div class="flex-col">
-                    <span class="day">Fri</span>
+                    <span id="day5" class="day">Fri</span>
                     <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon5" alt= "sun">
                     <span id="high5" class="temp">°</span>
                 </div>
