fixed wind speed spaceing

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -52,8 +52,8 @@
                 <div id="current" class="contentbox"></div>
                 <div class="contentbox"><span id="high">  </span>°F</div><!--temp-->
                 <div class="contentbox">Wind Chill : <span id="chillWind"> </span> °F</div><!--windchill-->
-                <div id="humid" class="contentbox">Humitdity : 20%</div>
-                <div class="contentbox">Wind Speed :<span id="wind"> 15</span> mph</div><!--wind-->
+                <div id="humid" class="contentbox">Humitdity : </div>
+                <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
             </div>
         </section>
         
