--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>Lesson 07: <a href= "lesson7/lazyload.html"> Lazyload</a> | <a href= "/lesson7/gallery7.html"> Gallery</a></li>
                 <li>Lesson 08: <a href= "lesson8/tablebuild.html">Tablebuild</a> | <a href= "/lesson8/stormcenter.html"> Storm Center</a></li>
                 <li>Lesson 09: <a href= "lesson9/prophets.html">Prophets</a> | <a href= "/lesson9/index.html">Weather Site Home Page </a></li>
-                <li>Lesson 10: <a href= "lesson10/preston-10.html">Weather API</a>
+                <li>Lesson 10: <a href= "lesson10/preston-10.html">Weather API</a> | <a href= "/lesson10/preston-10.html">API Weather Summary & Forecast </a></li>
             </ul>
         </nav>
     </main>
