finished forcast icon js

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -61,29 +61,29 @@
             <h2> 5 Day Forecast</h2>
             <div class="forecast">
                 <div class="flex-col">
-                    <span id="day1" class="day">Mon</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon1"alt= "sun">
-                    <span id="high1" class="temp">°</span>
+                    <span id="day1" class="day"></span>
+                    <img src="" id="icon1"alt= "sun">
+                    <span id="high1" class="temp"></span>
                 </div>
                 <div class="flex-col">
-                    <span id="day2" class="day">Tue</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon2" alt= "sun">
-                    <span id="high2" class="temp">°</span>
+                    <span id="day2" class="day"></span>
+                    <img src="" id="icon2" alt= "sun">
+                    <span id="high2" class="temp"></span>
                 </div>
                 <div class="flex-col">
-                    <span id="day3" class="day">Wed</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon3" alt= "sun">
-                    <span id="high3" class="temp">°</span>
+                    <span id="day3" class="day"></span>
+                    <img src="" id="icon3" alt= "sun">
+                    <span id="high3" class="temp"></span>
                 </div>
                 <div class="flex-col">
-                    <span id="day4" class="day">Thur</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon4" alt= "sun">
-                    <span id="high4" class="temp">°</span>
+                    <span id="day4" class="day"></span>
+                    <img src="" id="icon4" alt= "sun">
+                    <span id="high4" class="temp"></span>
                 </div>
                 <div class="flex-col">
-                    <span id="day5" class="day">Fri</span>
-                    <img src="/lesson6/images6/suncloudy-png_1780731.png" id="icon5" alt= "sun">
-                    <span id="high5" class="temp">°</span>
+                    <span id="day5" class="day"></span>
+                    <img src="" id="icon5" alt= "sun">
+                    <span id="high5" class="temp"></span>
                 </div>
                 
                 
