changed hero banner with img optimization

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -41,10 +41,10 @@
         <h2>Preston Idaho</h2>
         <section class="section1">
             <picture class="photoA">
-                <source media="(min-width: 250px) and (max-width: 500px)" srcset="images10/franklin200px.jpg">
-                <source media="(min-width: 501px) and (max-width: 799px)" srcset="images10/franklin500px.jpg"> 
-               <source media="(min-width: 800px)" srcset= "images10/franklin800px.jpg">  
-                 <img id="heroimg" src="images10/franklinOriginal.jpeg" alt="green rolling hills">
+                <source media="(min-width: 250px) and (max-width: 500px)" srcset="images10/preston400.jpg">
+                <source media="(min-width: 501px) and (max-width: 799px)" srcset="images10/preston700.jpg"> 
+               <source media="(min-width: 800px)" srcset= "images10/preston1000.jpg">  
+                 <img id="heroimg" src="images10/herobanner.jpg" alt="green rolling hills">
             </picture>  
             <div class="weatherSum">
                 
